fix: Prevent FOUC for dark mode users

--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-zinc-50;
+}
+@media (prefers-color-scheme: dark) {
+  body {
+    @apply bg-zinc-900;
+  }
+}
